<resources>
    <string name="app_name">ITIS-shop</string>
    <string name="catalog_name">Catalog</string>
    <string name="shopping_cart_name">Shopping cart</string>
    <string name="favorite_name">Favorite</string>
    <string name="profile_name">Profile</string>
    <string name="product_card_name">Product card</string>
    <string name="profile_text">Имя пользователя</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="balance">Баланс: 0 руб</string>
    <string name="addition">Пополнить баланс</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password_login">Password</string>
    <string name="new_to_here">New to here?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password_register">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="input_sum">Введите сумму</string>
    <string name="input_button_dialog">Подтвердить</string>
    <string name="username_icon">M18,13.714C18.682,13.714 19.336,13.985 19.818,14.467C20.301,14.95 20.571,15.604 20.571,16.286V16.899C20.571,19.965 16.963,22.286 12,22.286C7.037,22.286 3.429,20.085 3.429,16.899V16.286C3.429,15.604 3.7,14.95 4.182,14.467C4.664,13.985 5.318,13.714 6,13.714H18ZM18,15H6C5.681,15 5.372,15.119 5.136,15.334C4.899,15.548 4.751,15.843 4.72,16.161L4.714,16.286V16.899C4.714,19.191 7.619,21 12,21C16.222,21 19.161,19.196 19.281,17.037L19.286,16.899V16.286C19.286,15.966 19.167,15.658 18.952,15.422C18.737,15.185 18.442,15.037 18.124,15.006L18,15ZM12,1.714C12.675,1.714 13.344,1.847 13.968,2.106C14.592,2.364 15.159,2.743 15.637,3.221C16.114,3.698 16.493,4.265 16.751,4.889C17.01,5.513 17.143,6.182 17.143,6.857C17.143,7.533 17.01,8.201 16.751,8.825C16.493,9.449 16.114,10.016 15.637,10.494C15.159,10.971 14.592,11.35 13.968,11.608C13.344,11.867 12.675,12 12,12C10.636,12 9.328,11.458 8.363,10.494C7.399,9.529 6.857,8.221 6.857,6.857C6.857,5.493 7.399,4.185 8.363,3.221C9.328,2.256 10.636,1.714 12,1.714ZM12,3C10.977,3 9.996,3.406 9.273,4.13C8.549,4.853 8.143,5.834 8.143,6.857C8.143,7.88 8.549,8.861 9.273,9.585C9.996,10.308 10.977,10.714 12,10.714C13.023,10.714 14.004,10.308 14.727,9.585C15.451,8.861 15.857,7.88 15.857,6.857C15.857,5.834 15.451,4.853 14.727,4.13C14.004,3.406 13.023,3 12,3Z</string>
</resources>